--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,8 @@ body {
   background-color: #d9d9d9;
 }
 
+/* HOMEPAGE UI */
+
 .header {
   background-color: #eff1f3;
   border-radius: 3px;
@@ -102,7 +104,8 @@ ul > li > button {
   opacity: 40%;
 }
 
-.text-wrapper-home {
+.text-wrapper-home,
+.text-wrapper-menu {
   display: flex;
   flex-direction: column;
   width: 25%;
@@ -177,5 +180,80 @@ ul > li > button {
   }
   100% {
     transform: translateX(-300%);
+  }
+}
+
+/* MENUPAGE UI */
+
+.image-holder-menu {
+  border: 1px groove #616161;
+  width: 560px;
+  height: 400px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 47%;
+  left: 62%;
+  border-radius: 120px 16px / 16px 160px;
+  display: flex;
+  overflow: hidden;
+  box-shadow: 10px 25px 30px rgba(151, 151, 151, 0.3);
+}
+
+.image-holder-menu img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.menu-btn-holder {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 76%;
+  left: 62%;
+  width: 130px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.menu-circle-btn {
+  background-color: white;
+  border-radius: 15px;
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  margin: 0.3rem;
+}
+
+.menu-circle-btn:hover {
+  box-shadow: 0px 0px 7px 4px rgba(7, 62, 69, 0.994);
+  background-color: rgba(193, 190, 190, 0.949);
+}
+
+.img-menu {
+  display: flex;
+  width: 400%;
+  height: 100%;
+  animation: menuFoodSlider 20s ease-in-out infinite;
+}
+
+@keyframes menuFoodSlider {
+  0%,
+  20% {
+    transform: translateX(0%);
+  }
+  25%,
+  45% {
+    transform: translateX(-100%);
+  }
+  50%,
+  70% {
+    transform: translateX(-200%);
+  }
+  75%,
+  95% {
+    transform: translateX(-300%);
+  }
+  100% {
+    transform: translateX(0%);
   }
 }
