--- a/src/styles.css
+++ b/src/styles.css
@@ -136,7 +136,7 @@ ul > li > button {
 }
 
 .image-holder-home {
-  border: 1px groove #616161;
+  border: 3px solid #000000;
   width: 400px;
   height: 450px;
   position: absolute;
@@ -186,7 +186,7 @@ ul > li > button {
 /* MENUPAGE UI */
 
 .image-holder-menu {
-  border: 1px groove #616161;
+  border: 3px solid #000000;
   width: 560px;
   height: 400px;
   position: absolute;
@@ -239,4 +239,27 @@ ul > li > button {
   font-family: "SourceSerif4";
   font-size: 2.5em;
   color: yellow;
+}
+
+/* About Page Ui */
+
+.image-holder-chefs {
+  border: 3px solid #000000;
+  width: 300px;
+  height: 450px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  border-radius: 120px 16px / 16px 160px;
+  top: 50%;
+  left: 24%;
+  display: flex;
+  overflow: hidden;
+  box-shadow: 10px 25px 30px rgba(151, 151, 151, 0.3);
+}
+
+.img-chefs {
+  animation: slide 16s infinite;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
